--- a/packages/react/public/index.html
+++ b/packages/react/public/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <title></title>
     </head>
     <body>
-    <div id="ReactApp"></div>
+        <div id="ReactApp"></div>
     </body>
 </html>
