--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <title></title>
     </head>
-    <body>
-    </body>
+    <body></body>
 </html>
