feat: render sectionA inside container

--- a/packages/sectionA/public/index.html
+++ b/packages/sectionA/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <title></title>
-        <script defer src="bundle.js"></script>
     </head>
-    <body></body>
+    <body>
+        <div id="sectionAContainer"></div>
+    </body>
 </html>
