--- a/packages/container/public/index.html
+++ b/packages/container/public/index.html
@@ -4,6 +4,7 @@
         <title></title>
     </head>
     <body>
-        <div id="root"></div>
+        <h1>Container</h1>
+        <div id="sectionAContainer"></div>
     </body>
 </html>
